--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cross-env": "^7.0.2",
     "email-validator": "^2.0.4",
     "express": "^4.17.1",
+    "mongoose": "^5.9.9",
     "node-xlsx": "^0.15.0",
     "nodemailer": "^6.4.6"
   }
